fixed jumping issue and infinite loops

--- a/stylesheets/sass/main.scss
+++ b/stylesheets/sass/main.scss
@@ -9,6 +9,7 @@ $powerline-height: 300px;
 }
 :root {
     //create super nutty css variables
+    //demo: http://codepen.io/jasesmith/pen/dpwjra
     --position-x: 0;
     --position-y: 0;
 }
@@ -28,7 +29,7 @@ $powerline-height: 300px;
         background-image: url("../images/shuffle.png");
         background-size: auto 100%;
         background-position: 100% 0%;
-        animation: move 2s infinite steps(3,start);
+        animation: cycleFrames 1s 5 steps(3,start), move 1s 5 ease-in-out forwards;
         animation-play-state: paused;
     }
     path {
@@ -43,6 +44,7 @@ body {
     overflow-x: hidden;
     h1 { font-size: 3em;}
     h2 { font-size: 2em; text-align: center}
+    background-color: #AECFEA;
 }
 .wrapper {
     width: 100%;
@@ -145,26 +147,14 @@ main {
     background-color: $scroll-thumb;
 }
 
+@keyframes cycleFrames {
+    from { background-position: 0% bottom; }
+    to {background-position: 100% bottom; }
+}
 
 @keyframes move {
-    from { background-position: 0% bottom; }
-    to {background-position: 100% bottom; 
+    to { 
         top: calc(var(--position-y) * 1px);
         left: calc(var(--position-x) * 1px);
     } 
-}
-
-
-
-
-
-
-@keyframes slide-center {
-    to {opacity: 1; transform: translate(-50%, 0); }  
-}
-@keyframes slide-left {
-    to {opacity: 0; transform: translate(-50%, 0) rotateY(-90deg);} 
-}
-@keyframes slide-right {
-    to {opacity: 0; transform: translate(-50%, 0) rotateY(90deg);} 
 }
